--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,5 @@
 @import "sass/_flexboxgrid.scss";
+@import "sass/_swiper.scss";
 @import "sass/_variable.scss";
 @import "sass/_mixins.scss";
 @import "sass/_global.scss";
