--- a/css/sass/_global.scss
+++ b/css/sass/_global.scss
@@ -1,3 +1,21 @@
 body{
-    background-color: red;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    background-color:$main;
+    font-family: 'Lato', sans-serif;
+    font-weight: normal;
 }
+h1, h2, h3, h4, h5, h6{
+    font-weight: 700;
+}
+p{
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.main-color{
+    color:$main;
+}
+
