--- a/css/sass/_lp.scss
+++ b/css/sass/_lp.scss
@@ -3,10 +3,14 @@ main.wraper{
     display: block;
     width: 100%;
     height: 100%;
+    @media #{$xs} {
+        height: auto;
+    }
     .row{
         padding: 0;
         margin: 0;
         height: 100%;
+
     }
     .sidebar{
         background:#fff;
@@ -15,6 +19,14 @@ main.wraper{
         position: relative;
         z-index: 6;
         @include shadow;
+        @media #{$xs} {
+            height: auto;
+        }
+        .swiper-scrollbar{
+            @media #{$xs} {
+                display: none;
+            }
+          }
         .swiper-wraper {
             width: 100%;
             height: 100%;
@@ -24,7 +36,7 @@ main.wraper{
             height: auto;
             -webkit-box-sizing: border-box;
             box-sizing: border-box;
-            padding: 30px;
+            padding: 0 30px;
           }
         h1{
             background-color: $main;
@@ -33,7 +45,7 @@ main.wraper{
             margin: 0px;
             font-size: 16px;
             color:#fff;
-            
+            margin-top: 30px;
             
             span{
                 font-size: 33px;
@@ -93,25 +105,62 @@ main.wraper{
                     width: 100%;
                     display: block;
                     background-color: $main;
-                    background-image: url(../img/arrow2.png);
-                    background-repeat: no-repeat;
-                    background-position: center right;
-                    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.23137254901960785);
                     color:#fff;
                     font-weight: 700;
                     font-size: 24px;
                     padding:10px 15px;
                     border:none;
                     text-align: left;
-                    margin: 10px 15px 10px 0;
+                    margin: 10px 0;
                     &:focus{
                         outline: none;
                         box-shadow: none;
                         background-color: darken($main, 5%)
                     }
+                    span{
+                        background-image: url(../img/arrow2.png);
+                        background-repeat: no-repeat;
+                        background-position: center right;
+                        height: 100%;
+                        top: 0;
+                        right: 10px;
+                        left: inherit;
+                    }
 
                 }
 
+            }
+            
+            .check{
+                margin-bottom: 10px;
+                input{
+                    width: 20px;
+                    min-width: 20px;
+                    padding: 0;
+                    height: 16px;
+                    margin-right: 10px;
+                    box-shadow: none!important;
+                    margin: 0;
+                } 
+                label{
+                    font-size: 12px;
+                    display: flex;
+                }
+                span{
+                    margin-left:10px;
+                }
+            }
+            .check-one{
+                margin: 10px 0 20px;
+                label{
+                    margin: 0px 5px;
+                    font-size: 16px!important;
+                    color:$main;
+                }
+                input{
+                    // height: 20px!important;
+                    // width: 20px;
+                }
             }
         }
     }
@@ -121,16 +170,25 @@ main.wraper{
         .top-right-corner{
             position: absolute;
             text-align: right;
-            z-index: 2;
+            z-index: 3;
             top: 0px;
             right: 0px;
             padding: 15px;
+            @media #{$sm} {
+                top: 41px;
+            }
+            @media #{$xs} {
+                top: 70px;
+            }
             .facebook{
                 display: block;
                 text-align: left;
                     text-decoration: none;
                     text-transform: uppercase;
                     color:$main2;
+                    @media #{$sm} {
+                        text-align: right;
+                    }
             }
             .tel{
                 display: block;
@@ -142,6 +200,9 @@ main.wraper{
                     span{
                         font-size: 18px!important;
                     }
+                    @media #{$sm} {
+                        text-align: right;
+                    }
             }
             .see{
                 width: 128px;
@@ -151,12 +212,25 @@ main.wraper{
         .top-left-corner{
             position: absolute;
             top:10%;
-            z-index: 2;
+            z-index: 3;
             display: flex;
             justify-content: center;
             align-items: center;
             background: $main;
-            span{
+            @media #{$xs} {
+                position: inherit;
+                justify-content: left;
+            }
+            img{
+                @media #{$md}{
+                    width:250px;
+                }
+                @media #{$xs} {
+                    width: 64%;
+                }
+            }
+            a{
+                text-decoration: none;
                 color:#fff;
                 font-size: 16px;
                 padding: 10px 20px;
@@ -165,42 +239,17 @@ main.wraper{
                 background-image: url(../img/arrow.png);
                 background-repeat: no-repeat;
                 background-position: center right;
-            }
-        }
-        .bottom-left-corner{
-            position: absolute;
-            z-index: 3;
-            bottom: 10%;
-            background:$main;
-            .boxes{
-                display: flex;
-                padding: 10px;
-                background: #fff;
-                
-                .box{
-                    padding: 15px;
-                    text-align: center;
-                    background:#fff;
-                    border-right: 1px solid #dfdfdf;
-                    &:last-child{
-                        border:none;
-                    }
-                    p{
-                        color:$main2;
-                        font-size: 14px;
-                    }
+                @media #{$xs} {
+                   font-size: 12px;
+                   padding: 0px 15px;
                 }
             }
-            span{
-                background-color:$main;
-                background-image: url(../img/arrow2.png);
-                background-repeat: no-repeat;
-                background-position: center right;
+        }
+        .carousel{
+            position: relative;
+            display: contents;
+            @media #{$xs} {
                 display: block;
-                padding: 15px;
-                margin-right: 10px;
-                color:#fff;
-                text-transform: uppercase;
             }
         }
         .swiper-container {
@@ -216,13 +265,27 @@ main.wraper{
           .gallery-top {
             height: 100%;
             width: 100%;
+            @media #{$xs} {
+                height: 500px;
+            }
+            .swiper-wrapper{
+                @media #{$xs} {
+                //    display:block;
+                }
+            }
           }
           .gallery-thumbs {
             position: fixed;
+            z-index: 3;
             bottom: 0px;
             right: 0px;
             box-sizing: border-box;
             padding: 10px 0;
+            @media #{$xs} {
+                position: absolute;
+                bottom: 10px;
+                
+            }
           }
           .gallery-thumbs .swiper-slide {
             height: 100%;
@@ -230,7 +293,12 @@ main.wraper{
             opacity: 1;
             border:3px solid black;
             @include shadow;
+            @media #{$xs} {
+                // width: inherit!important;
+                width: 100px!important;
+            }
           }
+         
           .gallery-thumbs .swiper-slide-thumb-active {
             opacity: 1;
             border:3px solid $main;
@@ -238,5 +306,138 @@ main.wraper{
     }
 }
 
+.wraper2{
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    @media #{$xs} {
+        position: inherit;
+        height: auto;
+    }
+    .row{
+        margin:0;
+        .col-lg-9{
+            margin:0;
+            padding: 0;
+        }
+    }
+    .bottom-left-corner{
+        position: absolute;
+        z-index: 3;
+        bottom: 10%;
+        background:$main;
+        @media #{$md} {
+            bottom: 20%;
+        }
+        @media #{$xs} {
+            position: inherit;
+        }
+        .boxes{
+            display: flex;
+            padding: 10px;
+            background: #fff;
+            @media #{$md} {
+                padding: 5px;
+            }
+            
+            .box{
+                padding: 15px;
+                text-align: center;
+                background:#fff;
+                border-right: 1px solid #dfdfdf;
+                flex-grow: 1;
+                &:last-child{
+                    border:none;
+                }
+                @media #{$md} {
+                    padding: 5px;
+                }
+                
+                p{
+                    color:$main2;
+                    font-size: 14px;
+                    @media #{$sm} {
+                        font-size: 12px;
+                    }
+                }
+            }
+        }
+        a{
+            background-color:$main;
+            text-decoration: none;
+            background-image: url(../img/arrow2.png);
+            background-repeat: no-repeat;
+            background-position: center right;
+            display: block;
+            padding: 15px;
+            margin-right: 10px;
+            color:#fff;
+            text-transform: uppercase;
+        }
+    }
+}
 
     
+.modal{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 20;
+    padding: 30px;
+    width:  100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition:visibility 0s linear 0.1s,opacity 0.3s ease;
+    
+    &.open{
+      visibility:visible;
+      opacity: 1;
+      transition-delay:0s;
+    }
+    
+    &__overlay{
+      position: fixed;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      z-index: 21;
+      background-color: rgba($main,0.7);
+    }
+    
+    &__close{
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      border: none;
+      outline: none;
+      background: none;
+      font-size: 24px;
+      color: #747474;
+      font-weight: bold;
+      
+      &:hover{
+        color: #000;
+      }
+    }
+    
+    &__container{
+      position: relative;
+      z-index: 22;
+      width: 80%;
+      height: 80%;
+      top: 50%;
+      transform: translateY(-50%);
+      margin: 0 auto;
+      padding: 30px;
+      background-color: #fff;
+      text-align: center;
+    }
+  }
