--- a/css/main.css
+++ b/css/main.css
@@ -1595,6 +1595,28 @@ p {
   color: #f64700;
 }
 
+.error {
+  font-size: 11px;
+  position: absolute;
+  bottom: 3px;
+  z-index: 2;
+  color: red;
+}
+
+#map {
+  width: 100%;
+  height: 100%;
+}
+
+.cta {
+  background-color: #f64700;
+  padding: 5px 10px;
+  color: #fff;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
 main.wraper {
   display: block;
   width: 100%;
@@ -1710,7 +1732,7 @@ main.wraper .sidebar form .input-group input {
   padding: 0 10px 0 32px;
   width: 100%;
   height: 45px;
-  margin-bottom: 10px;
+  margin-bottom: 18px;
 }
 
 main.wraper .sidebar form .input-group input:focus {
@@ -1752,6 +1774,8 @@ main.wraper .sidebar form .input-group .btn-send span {
 
 main.wraper .sidebar form .check {
   margin-bottom: 10px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 main.wraper .sidebar form .check input {
@@ -1774,6 +1798,27 @@ main.wraper .sidebar form .check label {
 
 main.wraper .sidebar form .check span {
   margin-left: 10px;
+}
+
+main.wraper .sidebar form .check .error {
+  bottom: -11px;
+}
+
+main.wraper .sidebar form .check #zgodaWiecej a, main.wraper .sidebar form .check #zgodaWiecej2 a {
+  color: #f64700;
+}
+
+main.wraper .sidebar form .check .tooltip {
+  background: rgba(246, 71, 0, 0.8);
+  width: 85%;
+  right: 0;
+  bottom: 29px;
+  position: absolute;
+  z-index: 2;
+  padding: 10px;
+  font-size: 12px;
+  color: #fff;
+  display: none;
 }
 
 main.wraper .sidebar form .check-one {
@@ -2114,8 +2159,8 @@ main.wraper .article .gallery-thumbs .swiper-slide-thumb-active {
 
 .modal__close {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 5px;
+  right: 5px;
   border: none;
   outline: none;
   background: none;
