--- a/css/sass/_global.scss
+++ b/css/sass/_global.scss
@@ -19,3 +19,26 @@ p{
     color:$main;
 }
 
+
+.error{
+    font-size: 11px;
+    position: absolute;
+    bottom: 3px;
+    z-index: 2;
+    color: red;
+}
+
+#map
+{
+    width: 100%;
+    height: 100%;
+}
+
+.cta{
+    background-color: $main;
+    padding:5px 10px;
+    color:#fff;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
