--- a/css/sass/_mixins.scss
+++ b/css/sass/_mixins.scss
@@ -3,3 +3,8 @@
         -moz-box-shadow: 5px 0px 32px 0px rgba(0,0,0,0.75);
         box-shadow: 5px 0px 32px 0px rgba(0,0,0,0.75);
 }
+@mixin shadowBtn{
+    -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.4);
+        -moz-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.4);
+        box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.4);
+}
