--- a/css/sass/_lp.scss
+++ b/css/sass/_lp.scss
@@ -98,7 +98,7 @@ main.wraper{
                     height: 45px;
                     margin-bottom: 18px;
                     &:focus{
-                        border: 1px solid #f64700 !important;
+                        border: 1px solid green !important;
                         box-shadow: 0px 0px 4px 4px rgba(0,0,0, .1);
                         outline: none;
                         
@@ -193,7 +193,7 @@ main.wraper{
             }
         }
     }
-    .article{
+    .container{
         margin: 0;
         padding: 0;
         .top-right-corner{
