--- a/css/sass/_lp.scss
+++ b/css/sass/_lp.scss
@@ -154,6 +154,9 @@ main.wraper{
                 }
                 span{
                     margin-left:10px;
+                    span{
+                        color:$main
+                    }
                 }
                 .error{
                     bottom:-11px;
