--- a/css/sass/_lp.scss
+++ b/css/sass/_lp.scss
@@ -76,7 +76,7 @@ main.wraper{
                     width: 30px;
                     position: absolute;
                     left: 0;
-                    height: 45px;
+                    height: 35px;
                     background-repeat: no-repeat;
                     background-position: center ;
                 }
@@ -95,7 +95,7 @@ main.wraper{
                     border-bottom:1px solid $main2;
                     padding: 0 10px 0 32px;
                     width: 100%;
-                    height: 45px;
+                    height: 35px;
                     margin-bottom: 18px;
                     &:focus{
                         border: 1px solid green !important;
@@ -163,6 +163,7 @@ main.wraper{
                 }
                 
                 #zgodaWiecej, #zgodaWiecej2{
+                    font-size: 10px;
                     a{
                         color:$main;
                     }
