--- a/css/main.css
+++ b/css/main.css
@@ -2013,7 +2013,7 @@ main.wraper .container .top-left-corner a {
 main.wraper .container .carousel {
   position: relative;
   display: contents;
-  height: 100%;
+  height: 500px;
 }
 
 @media only screen and (max-width: 768px) {
