--- a/css/sass/_lp.scss
+++ b/css/sass/_lp.scss
@@ -289,7 +289,7 @@ main.wraper{
         .carousel{
             position: relative;
             display: contents;
-            height: 100%;
+            height: 500px;
             @media #{$xs} {
                 display: block;
             }
